correct a bug which will be triggered when the number of images is a multiplication of 100

--- a/backend/prototype/mapping/spi_visual.tmpl
+++ b/backend/prototype/mapping/spi_visual.tmpl
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <pix4dtmpl>
 	<information>
-		<info>template for stitching viusal images. GSD is set to 5cm</info>
+		<info>template for stitching visual images. GSD is set to 5cm</info>
 		<version>3.3.24</version>
 		<p4dVersion>15</p4dVersion>
 		<templateType>standard</templateType>
